--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Secure proxy for AI Coach (OpenAI)",
   "type": "module",
   "main": "server.js",
-"scripts": { "start": "node server.js" }
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "express": "^4.19.2",
     "cors": "^2.8.5"
