--- a/package.json
+++ b/package.json
@@ -1,17 +1,11 @@
 {
-  "name": "ai-coach-server",
-  "version": "1.0.0",
-  "description": "Secure proxy for AI Coach (OpenAI)",
+  "name": "captivate-ai-server",
   "type": "module",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
   "dependencies": {
     "express": "^4.19.2",
     "cors": "^2.8.5"
   },
-  "engines": {
-    "node": ">=18"
+  "scripts": {
+    "start": "node server.js"
   }
 }
